--- a/package.json
+++ b/package.json
@@ -3,10 +3,19 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["e-commerce, monitoring, cron"],
+  "keywords": [
+    "e-commerce, monitoring, cron"
+  ],
   "author": "Yogi Saputro",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "cron": "^1.8.2",
+    "dotenv": "^16.0.1",
+    "got": "^12.5.3",
+    "lowdb": "^5.0.5"
+  }
 }
