--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cron": "^1.8.2",
     "dotenv": "^16.0.1",
     "got": "^12.5.3",
-    "lowdb": "^5.0.5"
+    "lowdb": "^5.0.5",
+    "yargs": "^17.6.2"
   }
 }
