--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lowdb-init": "touch ./lowdb/shop-db.json && touch ./lowdb/kopet-db.json"
   },
   "keywords": [
     "e-commerce, monitoring, cron"
